urcu/tests/ui/list/iter-forward-fail-1.stderr
error[E0505]: cannot move out of `guard` because it is borrowed
  --> tests/ui/list/iter-forward-fail-1.rs:11:10
   |
9  |     let guard = context.rcu_read_lock();
   |         ----- binding `guard` declared here
10 |     let mut iter = list.iter_forward(&guard);
   |                                      ------ borrow of `guard` occurs here
11 |     drop(guard);
   |          ^^^^^ move out of `guard` occurs here
12 |     println!("{:?}", iter.next());
   |                      ---- borrow later used here
